--- a/Projects/navbar.css
+++ b/Projects/navbar.css
@@ -38,7 +38,7 @@ nav{
     padding:10px 20px;
     color:white;
     font-size: 1.2rem;
-    transition:all 1s;
+    transition:all 1s ease;
     cursor: pointer;
 }
 .right ul li a:hover{
@@ -57,7 +57,7 @@ nav{
         position: fixed;
         top:4rem;
         left: 100%;
-        transition: all 1s;
+        transition: all 1s ease;
     }
     #check{
         display: none;
